  - update OLC League calculation to latest ruleset
* tracking
  - xcsoar-cloud-service: rebuild service, new domain cloud.xcsoar.org
* data files
  - fix problem (introduced in v7.42) of first waypoint in user.cup waypoint
    file being ignored or being overwritten by any Waypoint Editor dialog
    function.
  - read PG landing waypoint type correctly in cup files
  - openair: support for openair 2.0 format
  - openair: parse transponder codes for airspaces
  - openair: parse station names for airspaces
* ui
  - streamlined, and optimized icons
  - apply dark mode settings to thermal assistant
  - apply dark mode to large flarm radar
  - add options to avoid infoboxes to flarm radar widget
  - changed location of setting for flarm radar position
  - Flarm gauge: when traffic is farther than 4 km away, it disappears
  - add new gesture ULDR to access quick menu
  - add quick menu page buttons in case of touch screen
  - add quit button to quick menu
  - infoboxen: new setting, allow scaling of title/comment font
  - Radar / Thermalassistant Gauges: Placement to avoid InfoBoxen and Overlap
  - Thermal assistant: New positions on top of map to avoid hiding airspace warnings
  - Add new InfoBox 'Home altitude difference' (Home AltD)
  - Add new InfoBox 'Alternate 1 altitude difference' (Altn 1 AltD)
  - Add new InfoBox 'Alternate 2 altitude difference' (Altn 2 AltD)
  - Show transponder mode (if available) in transponder code InfoBox
  - add helpers on infoboxes for Argentinean contests 95% distance rule
  - Popup messages now appear at the top of the map
  - add status messages for user actions and state changes (alternates, task abort, task armed, final glide mode, terrain/topography visibility, airspace visibility)
  - FlarmTrafficWindow: align colors of FlarmTraffic with map for consistency
  - BigTrafficWidget: Save/Restore FLARM radar zoom on page change
  - BigTrafficWidget: zoom range to 5km when opening big radar via the FlarmGauge